--- a/_config.yml
+++ b/_config.yml
@@ -4,22 +4,16 @@
 title: 老冯py
 
 # Short description of your site
-#<<<<<<< HEAD
-#description: 老冯的python实验室
-#=======
 description: 老冯的python和大数据实验室
-#>>>>>>> 3b01f10e08e2b30a45ebe45ddaa3cf2d300fd38d
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
 
 # url is the the website domain URL without a trailing slash
-#<<<<<<< HEAD
 #url: "https://laofeng-py.github.io"
 =======
 url: "https://laofeng-py.github.io"
-#>>>>>>> 3b01f10e08e2b30a45ebe45ddaa3cf2d300fd38d
 
 # baseurl should be an empty string
 #baseurl: ""
@@ -28,7 +22,6 @@ url: "https://laofeng-py.github.io"
 
 # List of links in the navigation bar
 navbar-links:
-#<<<<<<< HEAD
   python资源:
     - numpy: "https://www.numpy.org/doc/"
     - pandas: "https://pandas.pydata.org/pandas-docs/stable/"
@@ -49,8 +42,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
-  Author's home: "https://laofeng-py.github.com"
-#>>>>>>> 3b01f10e08e2b30a45ebe45ddaa3cf2d300fd38d
+  Author's home: "https://laofeng-py.github.io"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -86,11 +78,7 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-#<<<<<<< HEAD
-  name: laofeng
-#=======
   name: 老冯
-#>>>>>>> 3b01f10e08e2b30a45ebe45ddaa3cf2d300fd38d
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
@@ -278,6 +266,3 @@ prose:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
